jobs.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1-deploy
  labels:
    app: demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
      - name: demo1
        image: gcr.io/iafox-staging/iafox:webapp-3.1.12
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
          limits:
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: demo1-svc
spec:
  selector:
    app: demo1
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort

---
